hphp/hack/test/typecheck/deprecated_escaped_message.php
<?hh

<<__Deprecated('testing \n \t \\ \''.' foo')>>
function foo() {}

function f() {
  foo();
}
